<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">我的现场</string>
    <string name="menu_settings">退出</string>
    <string name="pro_create">创建项目</string>
    <string name="pro_search">搜索项目</string>
    <string name="search">搜索</string>
    <string name="hint_search_byid">请输入项目id</string>
    <string name="hint_search_byname">请输入项目名称</string>
    <string name="pro_name">项目名称</string>
    <string name="pro_id">项目ID</string>
    <string name="pro_id_hint">请输入项目ID</string>
    <string name="pro_name_hint">请输入项目名称</string>
    <string name="button_back">返回</string>
    <string name="button_search">搜索</string>
    <string name="detail_one">基本信息</string>
    <string name="detail_two">钻井记录</string>
    <string name="detail_three">洗井记录</string>
    <string name="pro_now_weather">天气</string>
    <string name="pro_now_welldepth">钻孔日期</string>
    <string name="pro_now_wellmonitaor_radis">检测井内径</string>
    <string name="pro_now_well_radis">钻孔内径</string>
    <string name="pro_now_well_way">钻孔方式</string>
    <string name="pro_now_well_writer">记录人</string>
    <string name="pro_now_well_id">井号</string>
    <string name="pro_now_well_firstdepth">初见水位深度</string>
    <string name="pro_well_depth">深度</string>
    <string name="pro_well_dirt">主土层性质</string>
    <string name="pro_well_dirtdetail">土层细节描述</string>
    <string name="pro_well_extra">补充</string>
    <string name="pro_localdata">本地数据</string>
    <string name="create_upload">上传</string>
    <string name="create_save">保存到本地</string>
    <string name="create_new">新建井</string>
    <string name="create_localdata">本地数据</string>
    <string name="create_localnone">本地数据为空</string>
    <string name="title_activity_well">WellActivity</string>
    <string name="well_create">井点建立</string>
    <string name="create_baseinfo">基本信息</string>
    <string name="create_digwell">钻井记录</string>
    <string name="create_washwell">洗井记录</string>
    <string name="pro_gps">GPS</string>
    <string name="base_gps_hint">正在定位...</string>
    <string name="base_weather">天气</string>
    <string name="base_date">钻孔日期</string>
    <string name="base_work">勘察单位</string>
    <string name="base_depth">钻孔深度</string>
    <string name="base_mradis">检测井内径</string>
    <string name="base_radis">钻孔内径</string>
    <string name="base_writer">记录人</string>
    <string name="base_first_depth">初见水位</string>
    <string name="base_wellnum">井号</string>
    <string name="base_createtime">记录时间</string>
    <string name="base_dig_method">钻孔方式</string>
    <string name="wash_date">洗井日期</string>
    <string name="wash_time">洗井时间</string>
    <string name="wash_method">洗井方法</string>
    <string name="wash_temp">样品温度</string>
    <string name="wash_cond">样品电导</string>
    <string name="wash_ph">样品ph</string>
    <string name="wash_water">温度水位</string>
    <string name="wash_gaocheng">高程</string>
    <string name="wash_createtime">记录时间</string>
    <string name="title_activity_local_data">LocalData</string>
    <string name="local_data">本地数据</string>
    <string name="local_none">本地数据为空</string>
    <string name="new_dirt">新建土层</string>
    <string name="new_pid">新建PID</string>
    <string name="title_activity_well__dig__dirt">Well_Dig_Dirt</string>
    <string name="dirt_title">钻井记录-土层</string>
    <string name="dirt_pid">钻井记录-PID读数</string>
    <string name="dirt_detail">土层细节描述</string>
    <string name="dirt_nature">主土层性质</string>
    <string name="pid_depth">样品选取深度</string>
    <string name="pid_memo">备注</string>
    <string name="pid_extra">补充</string>
    <string name="dig_well_title">已保存钻井记录</string>
    <string name="save">保存</string>
    <string name="button_edit">编辑</string>
    <string name="button_delete">删除</string>
    <string name="pid_text_none">PID读数数据为空</string>
    <string name="dirt_text_none">土层数据为空</string>
    <string name="add_well_first">请先在基本信息中填写井号</string>
    <string name="dirt_depth">土层深度</string>
    <string name="pid_value">PID读数</string>
    <string name="create_time">创建时间</string>
    <string name="button_ok">确定</string>
    <string name="button_cancel">取消</string>
    <string name="pid_title">钻井记录-PID</string>
    <string name="dirt_type">土层类别</string>
    <string name="mi">m</string>
    <string name="mm">mm</string>
    <string name="cond">µ</string>
    <string name="temp">℃</string>
</resources>