<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="left"
    android:gravity="left"
    android:orientation="horizontal"
     android:paddingLeft="5.0dip"
    android:paddingRight="5.0dip"
    android:weightSum="4" >

    <TextView
        android:id="@+id/project_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="left"
        android:paddingBottom="5.0dip"
        android:paddingTop="5.0dip"
        android:text="@string/pro_name"
        android:textColor="#1C9EDF" />

    <TextView
        android:id="@+id/project_id"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="left"
        android:paddingBottom="5.0dip"
        android:paddingTop="5.0dip"
        android:text="@string/pro_id"
        android:textColor="#1C9EDF" />

    <TextView
        android:id="@+id/well_num"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="left"
        android:paddingBottom="5.0dip"
        android:paddingTop="5.0dip"
        android:text="@string/base_wellnum"
        android:textColor="#1C9EDF" />

    <TextView
        android:id="@+id/project_createtime"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="left"
        android:paddingBottom="5.0dip"
        android:paddingTop="5.0dip"
        android:text="@string/base_createtime"
        android:textColor="#1C9EDF" />

</LinearLayout>