<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="left"
    android:gravity="left"
    android:orientation="horizontal"
    android:paddingBottom="5.0dip"
    android:paddingTop="5.0dip"
    android:paddingLeft="5.0dip"
    android:paddingRight="5.0dip"
    android:weightSum="3" >

    <TextView
        android:id="@+id/dig_well_num"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="left"
        android:text="@string/base_wellnum"
         android:textColor="#1c9edf" />

    <TextView
        android:id="@+id/dig_depth"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="left"
        android:text="@string/pid_value"
         android:textColor="#1c9edf" />

    <TextView
        android:id="@+id/dig_createtime"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="left"
        android:text="@string/create_time"
        android:textColor="#1c9edf" />

</LinearLayout>